src/objects/UniqueEntry__EnrichmentConfig__c.object
<CustomObject>
    <fields>
        <fullName>UniqueEntry__Action__c</fullName>
        <label>Action</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Mapped_Salesforce_Field__c</fullName>
        <label>Mapped Salesforce Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Object__c</fullName>
        <label>Object</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__UpdateField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdateField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__rlEnrichmentAPIName__c</fullName>
        <label>rlEnrichmentAPIName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EnrichmentConfig</label>
    <listViews>
        <fullName>UniqueEntry__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EnrichmentConfig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EnrichmentConfig</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>